# leveldb-feedstock

recipe/: 0001-Windows-port-from-bitcoin-core.patch  0002-Fix-MSVC-errors.patch  0003-Relax-tests-on-Windows.patch  CMakeLists.txt  bld.bat  build.sh  meta.yaml
